[package]
name = "sui-metrics-proxy"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
axum = "0.6.2"
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap = { version = "3.2.17", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.16"
futures = "0.3.23"
const-str = "0.5.3"
serde = { version = "1.0.144", features = ["derive", "rc"] }
git-version = "0.3.5"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
mime = "0.3"
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
# reqwest = { version = "0.11.13", default_features= false, features = ["blocking", "json", "rustls-tls"] }
